refactor(mask):重构脱敏规则组与打印逻辑
- 将 MaskRuleGroup 改为 record 类型，提升不可变性与简洁性- 使用 ConcurrentHashMap 优化规则存储，提高并发安全性
- 简化字段脱敏规则获取逻辑，提升性能- 移除冗余的字段访问与判断逻辑，减少重复计算
- 优化 ObjectMaskPrinter 中的循环引用检查与忽略类判断逻辑
- 调整敏感规则获取方式，统一通过 rueRegistry 获取字段规则
- 增加对类是否包含脱敏规则的快速判断方法 hasRule- 修复部分注释中的类引用显示问题，提升代码可读性